# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-26 19:19:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-48

    Summary:
      handlers, remove "print" statement
    Revision:
      itools--main--0.11--patch-48


    modified files:
     Changelog handlers/transactions.py


2005-10-26 19:18:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47

    Summary:
      resources, change transactions API (just "resource.get_transaction")
    Revision:
      itools--main--0.11--patch-47


    modified files:
     Changelog handlers/Handler.py handlers/transactions.py
     resources/base.py resources/zope2.py


2005-10-26 19:15:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-46

    Summary:
      gettext, fix "PO.to_str" (return a byte string)
    Revision:
      itools--main--0.11--patch-46


    modified files:
     Changelog gettext/PO.py


2005-10-26 18:17:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-45

    Summary:
      resources, fix Zope 2 resources
    Revision:
      itools--main--0.11--patch-45

    Use a single connection for all Zope 2 resources, this connection is
    not shared with the Zope pool of connections, it is only for us.

    modified files:
     Changelog handlers/transactions.py resources/zope2.py


2005-10-26 16:06:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-44

    Summary:
      uri, reverte change, "str(path)" returns '.' again (#30)
    Revision:
      itools--main--0.11--patch-44

    It broke ikaaro.

    modified files:
     Changelog uri/generic.py


2005-10-25 15:45:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-43

    Summary:
      merge unit test fixes from herve
    Revision:
      itools--main--0.11--patch-43

    Patches applied:
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-13
       fix misleading variable names.
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-14